crates/xberg-ffi/include/xberg.h

typedef uint64_t XBERGAlefHandle;
typedef struct XBERGXbergOcrBackendVTable {
  int32_t (*name_fn)(const void *user_data, char **out_name, char **out_error);
  int32_t (*version_fn)(const void *user_data, char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data, char **out_error);
  int32_t (*shutdown_fn)(const void *user_data, char **out_error);
  int32_t (*process_image)(const void *user_data, const uint8_t *image_bytes,
                           uintptr_t image_bytes_len, const char *config,
                           char **out_result, char **out_error);
  int32_t (*process_image_file)(const void *user_data, const char *path,
                                const char *config, char **out_result,
                                char **out_error);
  int32_t (*supports_language)(const void *user_data, const char *lang);
  int32_t (*backend_type)(const void *user_data, char **out_result,
                          char **out_error);
  int32_t (*supported_languages)(const void *user_data, char **out_result,
                                 char **out_error);
  int32_t (*supports_table_detection)(const void *user_data);
  int32_t (*supports_document_processing)(const void *user_data);
  int32_t (*emits_structured_markdown)(const void *user_data);
  int32_t (*confidence_semantics)(const void *user_data, char **out_result,
                                  char **out_error);
  int32_t (*page_orientation_handling)(const void *user_data, char **out_result,
                                       char **out_error);
  int32_t (*process_document)(const void *user_data, const char *_path,
                              const char *_config, char **out_result,
                              char **out_error);
  void (*free_string)(char *);
  void (*free_user_data)(void *);
} XBERGXbergOcrBackendVTable;
typedef struct XBERGXbergPostProcessorVTable {
  int32_t (*name_fn)(const void *user_data, char **out_name, char **out_error);
  int32_t (*version_fn)(const void *user_data, char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data, char **out_error);
  int32_t (*shutdown_fn)(const void *user_data, char **out_error);
  int32_t (*process)(const void *user_data, const char *result,
                     const char *config, char **out_error);
  int32_t (*processing_stage)(const void *user_data, char **out_result,
                              char **out_error);
  int32_t (*should_process)(const void *user_data, const char *_result,
                            const char *_config);
  uint64_t (*estimated_duration_ms)(const void *user_data, const char *_result);
  int32_t (*priority)(const void *user_data);
  void (*free_string)(char *);
  void (*free_user_data)(void *);
} XBERGXbergPostProcessorVTable;
typedef struct XBERGXbergValidatorVTable {
  int32_t (*name_fn)(const void *user_data, char **out_name, char **out_error);
  int32_t (*version_fn)(const void *user_data, char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data, char **out_error);
  int32_t (*shutdown_fn)(const void *user_data, char **out_error);
  int32_t (*validate)(const void *user_data, const char *result,
                      const char *config, char **out_error);
  int32_t (*should_validate)(const void *user_data, const char *_result,
                             const char *_config);
  int32_t (*priority)(const void *user_data);
  void (*free_string)(char *);
  void (*free_user_data)(void *);
} XBERGXbergValidatorVTable;
typedef struct XBERGXbergDocumentExtractorVTable {
  int32_t (*name_fn)(const void *user_data, char **out_name, char **out_error);
  int32_t (*version_fn)(const void *user_data, char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data, char **out_error);
  int32_t (*shutdown_fn)(const void *user_data, char **out_error);
  int32_t (*extract)(const void *user_data, const char *input,
                     const char *config, char **out_result, char **out_error);
  int32_t (*supported_mime_types)(const void *user_data, char **out_result,
                                  char **out_error);
  int32_t (*priority)(const void *user_data);
  int32_t (*can_handle)(const void *user_data, const char *_path,
                        const char *_mime_type);
  void (*free_string)(char *);
  void (*free_user_data)(void *);
} XBERGXbergDocumentExtractorVTable;
typedef struct XBERGXbergEmbeddingBackendVTable {
  int32_t (*name_fn)(const void *user_data, char **out_name, char **out_error);
  int32_t (*version_fn)(const void *user_data, char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data, char **out_error);
  int32_t (*shutdown_fn)(const void *user_data, char **out_error);
  uintptr_t (*dimensions)(const void *user_data);
  int32_t (*embed)(const void *user_data, const char *texts, char **out_result,
                   char **out_error);
  void (*free_string)(char *);
  void (*free_user_data)(void *);
} XBERGXbergEmbeddingBackendVTable;
typedef struct XBERGXbergRendererVTable {
  int32_t (*name_fn)(const void *user_data, char **out_name, char **out_error);
  int32_t (*version_fn)(const void *user_data, char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data, char **out_error);
  int32_t (*shutdown_fn)(const void *user_data, char **out_error);
  int32_t (*render_result)(const void *user_data, const char *result,
                           char **out_result, char **out_error);
  void (*free_string)(char *);
  void (*free_user_data)(void *);
} XBERGXbergRendererVTable;
typedef struct XBERGXbergRerankerBackendVTable {
  int32_t (*name_fn)(const void *user_data, char **out_name, char **out_error);
  int32_t (*version_fn)(const void *user_data, char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data, char **out_error);
  int32_t (*shutdown_fn)(const void *user_data, char **out_error);
  int32_t (*rerank)(const void *user_data, const char *query,
                    const char *documents, char **out_result, char **out_error);
  void (*free_string)(char *);
  void (*free_user_data)(void *);
} XBERGXbergRerankerBackendVTable;
int32_t xberg_last_error_code(void);
const char *xberg_last_error_context(void);
void xberg_free_string(char *ptr);
XBERGAlefHandle xberg_registry_load_embedded(void);
XBERGAlefHandle xberg_registry_get(XBERGAlefHandle this_, const char *id);
char *xberg_registry_summaries(XBERGAlefHandle this_);
uintptr_t xberg_registry_len(XBERGAlefHandle this_);
int32_t xberg_registry_is_empty(XBERGAlefHandle this_);
int32_t xberg_registry_sample_bytes(XBERGAlefHandle this_,
                                    const char *preset_id, const char *name,
                                    uint8_t **out_ptr, uintptr_t *out_len,
                                    uintptr_t *out_cap);
uintptr_t xberg_registry_extend_from_dir(XBERGAlefHandle this_,
                                         const char *dir);
XBERGAlefHandle xberg_reranker_config_default(void);
XBERGAlefHandle xberg_security_limits_default(void);
XBERGAlefHandle xberg_server_config_default(void);
char *xberg_server_config_listen_addr(XBERGAlefHandle this_);
int32_t xberg_server_config_cors_allows_all(XBERGAlefHandle this_);
int32_t xberg_server_config_is_origin_allowed(XBERGAlefHandle this_,
                                              const char *origin);
uintptr_t xberg_server_config_max_request_body_mb(XBERGAlefHandle this_);
uintptr_t xberg_server_config_max_multipart_field_mb(XBERGAlefHandle this_);
XBERGAlefHandle xberg_sparse_embedding_config_default(void);
char *xberg_structured_extraction_config_default_schema_name(void);
XBERGAlefHandle xberg_svg_options_default(void);
XBERGAlefHandle xberg_tesseract_config_default(void);
XBERGAlefHandle xberg_token_counter_new(void);
XBERGAlefHandle xberg_token_reduction_config_default(void);
XBERGAlefHandle xberg_token_reduction_options_default(void);
XBERGAlefHandle xberg_transcription_config_default(void);
XBERGAlefHandle xberg_tree_sitter_config_default(void);
XBERGAlefHandle xberg_tree_sitter_process_config_default(void);
XBERGAlefHandle xberg_url_extraction_config_default(void);
XBERGAlefHandle xberg_url_extraction_config_default_xberg_crawl_config(void);
XBERGAlefHandle xberg_yake_params_default(void);
int32_t
xberg_register_ocr_backend(const char *name,
                           const struct XBERGXbergOcrBackendVTable *vtable,
                           const void *user_data, char **out_error);
int32_t xberg_unregister_ocr_backend(const char *name, char **out_error);
int32_t xberg_clear_ocr_backend(char **out_error);
int32_t xberg_register_post_processor(
    const char *name, const struct XBERGXbergPostProcessorVTable *vtable,
    const void *user_data, char **out_error);
int32_t xberg_unregister_post_processor(const char *name, char **out_error);
int32_t xberg_clear_post_processor(char **out_error);
int32_t xberg_register_validator(const char *name,
                                 const struct XBERGXbergValidatorVTable *vtable,
                                 const void *user_data, char **out_error);
int32_t xberg_unregister_validator(const char *name, char **out_error);
int32_t xberg_clear_validator(char **out_error);
int32_t xberg_register_document_extractor(
    const char *name, const struct XBERGXbergDocumentExtractorVTable *vtable,
    const void *user_data, char **out_error);
int32_t xberg_unregister_document_extractor(const char *name, char **out_error);
int32_t xberg_clear_document_extractor(char **out_error);
int32_t xberg_register_embedding_backend(
    const char *name, const struct XBERGXbergEmbeddingBackendVTable *vtable,
    const void *user_data, char **out_error);
int32_t xberg_unregister_embedding_backend(const char *name, char **out_error);
int32_t xberg_clear_embedding_backend(char **out_error);
int32_t xberg_register_renderer(const char *name,
                                const struct XBERGXbergRendererVTable *vtable,
                                const void *user_data, char **out_error);
int32_t xberg_unregister_renderer(const char *name, char **out_error);
int32_t xberg_clear_renderer(char **out_error);
int32_t xberg_register_reranker_backend(
    const char *name, const struct XBERGXbergRerankerBackendVTable *vtable,
    const void *user_data, char **out_error);
int32_t xberg_unregister_reranker_backend(const char *name, char **out_error);
int32_t xberg_clear_reranker_backend(char **out_error);