packages/csharp/src/Xberg/NativeMethods.cs


  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_registry_load_embedded")]
  internal static extern ulong RegistryLoadEmbedded();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_registry_get")]
  internal static extern ulong
  RegistryGet(ulong handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string id);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_registry_summaries")]
  internal static extern IntPtr RegistrySummaries(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_registry_len")]
  internal static extern ulong RegistryLen(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_registry_is_empty")]
  internal static extern int RegistryIsEmpty(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_registry_sample_bytes")]
  internal static extern IntPtr
  RegistrySampleBytes(ulong handle,
                      [MarshalAs(UnmanagedType.LPUTF8Str)] string presetId,
                      [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_registry_extend_from_dir")]
  internal static extern ulong
  RegistryExtendFromDir(ulong handle,
                        [MarshalAs(UnmanagedType.LPUTF8Str)] string dir);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_reranker_config_default")]
  internal static extern ulong RerankerConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_security_limits_default")]
  internal static extern ulong SecurityLimitsDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_server_config_default")]
  internal static extern ulong ServerConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_server_config_listen_addr")]
  internal static extern IntPtr ServerConfigListenAddr(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_server_config_cors_allows_all")]
  internal static extern int ServerConfigCorsAllowsAll(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_server_config_is_origin_allowed")]
  internal static extern int ServerConfigIsOriginAllowed(
      ulong handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string origin);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_server_config_max_request_body_mb")]
  internal static extern ulong ServerConfigMaxRequestBodyMb(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_server_config_max_multipart_field_mb")]
  internal static extern ulong ServerConfigMaxMultipartFieldMb(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_sparse_embedding_config_default")]
  internal static extern ulong SparseEmbeddingConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint =
                 "xberg_structured_extraction_config_default_schema_name")]
  internal static extern IntPtr StructuredExtractionConfigDefaultSchemaName();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_svg_options_default")]
  internal static extern ulong SvgOptionsDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_tesseract_config_default")]
  internal static extern ulong TesseractConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_token_counter_new")]
  internal static extern ulong TokenCounterNew();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_token_reduction_config_default")]
  internal static extern ulong TokenReductionConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_token_reduction_options_default")]
  internal static extern ulong TokenReductionOptionsDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_transcription_config_default")]
  internal static extern ulong TranscriptionConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_tree_sitter_config_default")]
  internal static extern ulong TreeSitterConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_tree_sitter_process_config_default")]
  internal static extern ulong TreeSitterProcessConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_url_extraction_config_default")]
  internal static extern ulong UrlExtractionConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint =
                 "xberg_url_extraction_config_default_xberg_crawl_config")]
  internal static extern ulong UrlExtractionConfigDefaultXbergCrawlConfig();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_yake_params_default")]
  internal static extern ulong YakeParamsDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_last_error_code")]
  internal static extern int LastErrorCode();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_last_error_context")]
  internal static extern IntPtr LastErrorContext();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_free_string")]
  internal static extern void FreeString(IntPtr ptr);

  // Trait Bridge FFI

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_register_ocr_backend")]
  internal static extern int
  RegisterOcrBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                     IntPtr vtable, IntPtr userData, out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_unregister_ocr_backend")]
  internal static extern int
  UnregisterOcrBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                       out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_clear_ocr_backend")]
  internal static extern int ClearOcrBackend(out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_register_post_processor")]
  internal static extern int
  RegisterPostProcessor([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                        IntPtr vtable, IntPtr userData, out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_unregister_post_processor")]
  internal static extern int
  UnregisterPostProcessor([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                          out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_clear_post_processor")]
  internal static extern int ClearPostProcessor(out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_register_validator")]
  internal static extern int
  RegisterValidator([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                    IntPtr vtable, IntPtr userData, out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_unregister_validator")]
  internal static extern int
  UnregisterValidator([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                      out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_clear_validator")]
  internal static extern int ClearValidator(out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_register_document_extractor")]
  internal static extern int
  RegisterDocumentExtractor([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                            IntPtr vtable, IntPtr userData,
                            out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_unregister_document_extractor")]
  internal static extern int
  UnregisterDocumentExtractor([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                              out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_clear_document_extractor")]
  internal static extern int ClearDocumentExtractor(out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_register_embedding_backend")]
  internal static extern int
  RegisterEmbeddingBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                           IntPtr vtable, IntPtr userData, out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_unregister_embedding_backend")]
  internal static extern int
  UnregisterEmbeddingBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                             out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_clear_embedding_backend")]
  internal static extern int ClearEmbeddingBackend(out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_register_renderer")]
  internal static extern int
  RegisterRenderer([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                   IntPtr vtable, IntPtr userData, out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_unregister_renderer")]
  internal static extern int
  UnregisterRenderer([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                     out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_clear_renderer")]
  internal static extern int ClearRenderer(out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_register_reranker_backend")]
  internal static extern int
  RegisterRerankerBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                          IntPtr vtable, IntPtr userData, out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_unregister_reranker_backend")]
  internal static extern int
  UnregisterRerankerBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name,
                            out IntPtr outError);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_clear_reranker_backend")]
  internal static extern int ClearRerankerBackend(out IntPtr outError);
